app/globals.css
/* ... */
.absolute-button-bottom-left {
  position: absolute;
  bottom: 8px;
}

.absolute-button-bottom-left--second {
  position: absolute;
  bottom: 8px;
  left: 80px;
}

.absolute-button-bottom-right {
  position: absolute;
  bottom: 8px;
  right: 8px;
}

.absolute-button-bottom-right--second {
  position: absolute;
  bottom: 8px;
  right: 80px;
}

.action-button {
  background-color: #Ef4b4c;
  color: #ffffff;
  border: none;
  border-radius: 4px;
  height: 24px;
  min-width: 64px;;
  max-width: 100px;
  min-width: 60px;
  margin-right: 8px;
}

.action-button:hover {
  cursor: pointer;
  background-color: #f66161;
}

.action-button:hover:active {
  cursor: pointer;
  background-color: #f89292;
}

.navbar__button {
  background-color: #ffffff;
  border: 1px solid #cccccc;
  border-radius: 4px;
  height: 24px;
  max-width: 100px;
  margin-right: 8px;
}
.navbar__button:hover {
  cursor: pointer;
  background-color: #f1f1f1;
}
.navbar__button:active {
  background-color: #f5f5f5;
}

.navbar__button--disabled {
  background-color: #ffffff;
  border: 1px solid #cccccc;
  color: #cccccc;
  border-radius: 4px;
  height: 24px;
  width: 64px;
  margin-right: 8px;
}

.account-buttons{
  z-index: 100;
  position: fixed;
  display: grid;
  grid-template: 'a b c d';
  width: 100vw;
  bottom: 0px;
  height: 48px;
  align-items: center;
  background-color: #fff;
}
.page-button{
  font-size: 16px;
  background-color: #fff;
  border: none;
  border-top: solid 1px #cccccc;
  color: #Ef4b4c;
  height: 48px;
  transition: .2s;
}
.page-button:hover {
  cursor: pointer;
  font-size: 18px;
  transition: .2s;
}
.page-button--selected {
  font-size: 16px;
  background-color: #fff;
  border: none;
  border-top: solid 1px #cccccc;
  color: #Ef4b4c;
  height: 48px;
  font-weight: bold;
  transition: .2s;
}

.page-button--selected:hover {
  font-size: 18px;
  transition: .2s;
}

.toggle-button {
  background-color: #ffffff;
  border: none;
  border-radius: 4px;
  margin-left: 0px;
  height: 24px;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.toggle-button:hover {
  cursor: pointer;
  background-color: #f1f1f1;
}

.toggle-description-button {
  display: flex;
  justify-content: space-between;
}

.toggle-description-button:hover {
  cursor: pointer;
}

/*______________________________________ FORM */
pre {
  margin: 4px;
}

b {
  margin: 0 8px 0 0;
}

.form__offerings {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin: 0;
}

.form__offerings-alone {
  display: flex;
  align-items: center;
  margin: 8px 0;
}

.create-event-form {
  display: flex;
  flex-direction: column;
  border-radius: .375rem;
}

textarea,
input {
  margin: 0px 8px 0 0;
  border-radius: .375rem;
  border: solid #cccccc .5px;
  padding-left: 8px;
}

input {
  height: 28px;
}

.rti--container {
  margin-bottom: 8px;
}
.rti--input {
  width: 70% !important;
  height: 22px;
}

.inline-label-input {
  display: flex;
  align-items: center;
  margin-top: 6px;
}

.form__input-120w {
  width: 120px;
  margin-bottom: 8px;
}

.form__section-title {
  text-align: center;
  margin: 32px 0 8px 0;
}

/*______________________________________ CARDS */
.event-card {
  position: relative;
  margin: 8px 16px 32px;
  padding: 8px;
  border-radius: 8px;
  background-color: #fff;
  box-shadow: #eaeaea -2px 4px 4px 4px;
  display: flex;
  flex-direction: column;
  width: 340px;
  min-height: 240px;
}

.manage__create-by {
  display: flex;
  flex-direction: column;
  font-size: 12px;
}

.manage__add-guest {
  position: relative;
  display: flex;
  flex-direction: column;
  gap: 8px;
  justify-content: space-between;
}

.add-info__title {
  margin-bottom: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.manage__form-details {
  display: flex;
  flex-direction: column;
}

.manage__info {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 16px;
  padding: 0 8px;
  border-radius: 4px;
  margin-bottom: 8px;
}

.manage__description {
  display: flex;
  flex-direction: column;
  margin: 0 16px;
  padding: 0 8px;
  border-radius: 4px;
  margin-bottom: 8px;
}

.manage__info-column {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  margin: 0 16px;
  padding: 0 8px;
  border-radius: 4px;
  margin-bottom: 8px;
}

.manage__info-time-date {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 16px;
  margin-bottom: 8px;
  padding: 4px 0 4px 40px;
  border-radius: 4px;
  border: .6px solid #ccc
}

.manage__info-time-date-event {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 16px;
  margin-bottom: 8px;
  padding: 4px 20px;
  border-radius: 4px;
  border: .6px solid #ccc
}

/*________________________________ LIST DISPLAY */

.guest-list {
  margin: 4px 16px 8px;
  padding: 4px;
  background-color: #f1f1f1;
  border-radius: 4px;
  height: fit-content;
  opacity: 1;
  transition: .2s ease-in-out;
}

.guest-list-inner {
  margin: 4px 0 0 0;
  padding: 4px;
  background-color: #f1f1f1;
  border-radius: 4px;
  height: fit-content;
  opacity: 1;
  transition: .2s ease-in-out;
}

.guest-list--hidden {
  line-height: 0px;
  overflow: hidden;
  max-height: 0;
  opacity: 0;
  transition: .2s ease-in-out;
}

.list__names{
  padding: 4px 8px;
  font-size: 14px;
  max-height: 320px;
  overflow: auto;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.guest-restrictions {
  background-color: #fff;
  padding: 0 8px;
  margin-bottom: 4px;
  border-radius: 4px;
  opacity: 0;
  height: 0;
  transition: .2s;
}

.guest-restrictions--selected {
  background-color: #fff;
  padding: 0 8px;
  margin-bottom: 4px;
  border-radius: 4px;
  opacity: 1;
  height: 1;
  display: block;
  transition: .2s;
}
/* ... */

